Fixed overflow on x-axis within login page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -146,10 +146,9 @@ footer a i:hover {
 .fa-user {
     font-size: 24px;
     color: var(--caribbean-green);
-    width: 100%;
     margin-top: 32px;
 }
-  
+
 .input-field {
     width: 100%;
     padding: 10px;
